--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ nav span{
 .section-block{
   position:sticky;
   top:260px;
-  max-width:1000px;
+  max-width:1100px;
 }
 
 /* ========= HERO ========= */
@@ -93,6 +93,18 @@ nav span{
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
+  line-height:1.05;
+}
+
+/* ========= TEXT ========= */
+.section-block p{
+  margin-top:8px;
+  padding-left:8px;
+  font-size:15px;
+  color:#aaa;
+  max-width:700px;
+  line-height:1.6;
+  text-align:justify;
 }
 
 /* ========= ABOUT ========= */
@@ -102,16 +114,10 @@ h1{
   margin-top:12px;
 }
 
-.about p{
-  max-width:700px;
-  font-size:15px;
-  color:#aaa;
-  line-height:1.6;
-}
-
 .about img{
   width:300px;
   height:400px;
+  margin-top:16px;
   margin-left:40px;
   object-fit:cover;
   opacity:.9;
@@ -119,21 +125,22 @@ h1{
 
 /* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
+  position:relative;
   margin-top:32px;
   margin-left:8px;
   overflow:hidden;
   padding-right:120px;
-  position:relative;
 }
 
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
-  right:0;
   top:0;
+  right:0;
   width:120px;
   height:100%;
-  background:linear-gradient(to right, transparent, #0a0a0a);
+  pointer-events:none;
+  background:linear-gradient(to right, rgba(10,10,10,0), rgba(10,10,10,1));
 }
 
 .portfolio-carousel{
@@ -141,6 +148,7 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
+  scroll-behavior:smooth;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
@@ -156,6 +164,10 @@ h1{
 
 .project-card{
   min-width:460px;
+  flex-shrink:0;
+  text-decoration:none;
+  color:inherit;
+  cursor:pointer;
   opacity:0;
   transform:translateY(12px);
   transition:opacity .8s ease, transform .8s ease;
@@ -163,7 +175,7 @@ h1{
 
 .project-card.is-visible{
   opacity:1;
-  transform:none;
+  transform:translateY(0);
 }
 
 .project-image{
@@ -176,6 +188,25 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
+  transition:transform .4s ease;
+}
+
+.project-card:hover .project-image img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
+  font-size:28px;
+  font-weight:400;
+}
+
+.project-inner span{
+  display:block;
+  margin-top:6px;
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
 }
 
 /* ========= CV ========= */
@@ -212,7 +243,7 @@ h1{
 
 .cv-block.is-visible{
   opacity:1;
-  transform:none;
+  transform:translateY(0);
 }
 
 .cv-block::before{
@@ -228,6 +259,7 @@ h1{
 
 .cv-block h3{
   font-size:18px;
+  font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
   margin-bottom:20px;
@@ -240,9 +272,11 @@ h1{
 .cv-item strong{
   display:block;
   font-size:15px;
+  font-weight:500;
 }
 
 .cv-item span{
+  display:block;
   font-size:13px;
   color:#888;
 }
@@ -251,6 +285,14 @@ h1{
   margin-top:6px;
   font-size:14px;
   color:#aaa;
+}
+
+/* ========= FOOTER ========= */
+.footer-wrapper{
+  flex:1;
+  display:flex;
+  align-items:flex-end;
+  padding:0 0 20px 22vw;
 }
 
 </style>
@@ -281,10 +323,17 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial con formación técnica en electricidad y experiencia en
-        entornos industriales. Perfil ecléctico, práctico y orientado al proceso completo.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
       </p>
-      <img src="foto.jpg" alt="">
+      <img src="foto.jpg" alt="Foto personal">
     </div>
   </div>
 </section>
@@ -292,11 +341,48 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <div class="project-card"><div class="project-image"><img src="brazo1.jpg"></div></div>
-        <div class="project-card"><div class="project-image"><img src="reloj1.jpg"></div></div>
-        <div class="project-card"><div class="project-image"><img src="secador2.jpg"></div></div>
+
+        <a href="node.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="brazo1.jpg" alt="Proyecto NODE">
+            </div>
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="reloj1.jpg" alt="Cómoda Sixay">
+            </div>
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="secador2.jpg" alt="Exploración material">
+            </div>
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image"></div>
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
@@ -305,17 +391,29 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
+
     <div class="cv-wrapper" id="cv">
 
       <div class="cv-block">
         <h3>Formación</h3>
-        <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>UJI · UPV · Erasmus Londres</span></div>
+        <div class="cv-item">
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I · Universitat Politècnica de València · Erasmus Londres</span>
+        </div>
       </div>
 
       <div class="cv-block">
-        <h3>Experiencia</h3>
-        <div class="cv-item"><strong>Técnico electricista</strong><span>Autrial</span></div>
-        <div class="cv-item"><strong>Técnico electricista</strong><span>Elecnor</span></div>
+        <h3>Experiencia profesional</h3>
+        <div class="cv-item">
+          <strong>Técnico electricista</strong>
+          <span>Autrial</span>
+          <p>Instalación, mantenimiento y resolución técnica en entornos industriales.</p>
+        </div>
+        <div class="cv-item">
+          <strong>Técnico electricista</strong>
+          <span>Elecnor</span>
+          <p>Trabajo en instalaciones eléctricas y proyectos de gran escala.</p>
+        </div>
       </div>
 
       <div class="cv-block">
@@ -325,7 +423,9 @@ h1{
 
       <div class="cv-block">
         <h3>Software</h3>
-        <div class="cv-item"><strong>Rhino · AutoCAD · Inventor · Solid · Fusion · Sinutrain · 3ds Max</strong></div>
+        <div class="cv-item">
+          <strong>Rhinoceros · AutoCAD · Inventor · SolidWorks · Fusion 360 · Sinutrain · 3ds Max</strong>
+        </div>
       </div>
 
     </div>
@@ -333,33 +433,45 @@ h1{
 </section>
 
 <script>
+/* navegación */
 document.querySelectorAll("nav span").forEach((btn,i)=>{
   btn.addEventListener("click",()=>{
     document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
   });
 });
 
-/* portfolio */
+/* portfolio animación */
 const cards=document.querySelectorAll(".project-card");
 const cardObserver=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.3});
+  entries.forEach(e=>{
+    e.target.classList.toggle("is-visible",e.isIntersecting);
+  });
+},{threshold:0.3});
 cards.forEach(c=>cardObserver.observe(c));
 
-/* CV */
+/* CV animaciones */
 const cv=document.querySelector(".cv-wrapper");
 const blocks=document.querySelectorAll(".cv-block");
 
-blocks.forEach((b,i)=>b.style.transitionDelay=`${i*120}ms`);
+/* escalonado automático */
+blocks.forEach((block,i)=>{
+  block.style.transitionDelay = `${i * 120}ms`;
+});
 
-new IntersectionObserver(e=>{
-  if(e[0].isIntersecting) cv.classList.add("is-visible");
-},{threshold:.2}).observe(cv);
+/* línea */
+new IntersectionObserver(entries=>{
+  if(entries[0].isIntersecting){
+    cv.classList.add("is-visible");
+  }
+},{threshold:0.2}).observe(cv);
 
-const blockObs=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.3});
-blocks.forEach(b=>blockObs.observe(b));
+/* bloques */
+const blockObserver=new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    e.target.classList.toggle("is-visible",e.isIntersecting);
+  });
+},{threshold:0.3});
+blocks.forEach(b=>blockObserver.observe(b));
 </script>
 
 </body>
