--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-
-/* ========= RESET ========= */
 *{
   margin:0;
   padding:0;
@@ -17,7 +15,6 @@
   font-family:"Inter",sans-serif;
 }
 
-/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
@@ -25,7 +22,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
-/* ========= NAV ========= */
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -50,7 +47,7 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* SECTIONS */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -59,14 +56,13 @@ nav span{
   padding:180px 10vw 160px 22vw;
 }
 
-/* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
   top:260px;
   max-width:1100px;
 }
 
-/* ========= HERO ========= */
+/* HERO */
 .section.hero{
   align-items:center;
 }
@@ -77,10 +73,6 @@ nav span{
   margin-left:-4px;
 }
 
-.hero-surname{
-  white-space:nowrap;
-}
-
 .hero-sub{
   margin-top:24px;
   padding-left:4px;
@@ -89,41 +81,35 @@ nav span{
   color:#777;
 }
 
-/* ========= TYPO ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
-/* ========= TEXT ========= */
-.section-block p{
-  margin-top:8px;
-  padding-left:8px;
-  font-size:15px;
-  color:#aaa;
-  max-width:700px;
-  line-height:1.6;
-  text-align:justify;
-}
-
-/* ========= ABOUT ========= */
+/* ABOUT */
 .about{
   display:flex;
   align-items:flex-start;
   margin-top:12px;
 }
 
+.about p{
+  max-width:700px;
+  font-size:15px;
+  color:#aaa;
+  line-height:1.6;
+}
+
 .about img{
   width:300px;
   height:400px;
-  margin-top:16px;
   margin-left:40px;
   object-fit:cover;
   opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
+/* PORTFOLIO */
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
@@ -135,11 +121,10 @@ h1{
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
-  top:0;
   right:0;
+  top:0;
   width:120px;
   height:100%;
-  pointer-events:none;
   background:linear-gradient(to right, rgba(10,10,10,0), rgba(10,10,10,1));
 }
 
@@ -148,7 +133,6 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  scroll-behavior:smooth;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
@@ -164,10 +148,6 @@ h1{
 
 .project-card{
   min-width:460px;
-  flex-shrink:0;
-  text-decoration:none;
-  color:inherit;
-  cursor:pointer;
   opacity:0;
   transform:translateY(12px);
   transition:opacity .8s ease, transform .8s ease;
@@ -178,59 +158,22 @@ h1{
   transform:translateY(0);
 }
 
-.project-image{
-  height:260px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform .4s ease;
-}
-
-.project-card:hover .project-image img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  display:block;
-  margin-top:6px;
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ========= CV ========= */
+/* CV */
 .cv-wrapper{
   margin-top:32px;
   position:relative;
   padding-left:48px;
 }
 
-.cv-wrapper::before{
-  content:"";
+.cv-line{
   position:absolute;
   left:16px;
   top:0;
-  bottom:0;
   width:1px;
+  height:100%;
   background:rgba(255,255,255,.15);
   transform:scaleY(0);
   transform-origin:top;
-  transition:transform 1.2s ease;
-}
-
-.cv-wrapper.is-visible::before{
-  transform:scaleY(1);
 }
 
 .cv-block{
@@ -259,7 +202,6 @@ h1{
 
 .cv-block h3{
   font-size:18px;
-  font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
   margin-bottom:20px;
@@ -270,9 +212,7 @@ h1{
 }
 
 .cv-item strong{
-  display:block;
   font-size:15px;
-  font-weight:500;
 }
 
 .cv-item span{
@@ -286,15 +226,6 @@ h1{
   font-size:14px;
   color:#aaa;
 }
-
-/* ========= FOOTER ========= */
-.footer-wrapper{
-  flex:1;
-  display:flex;
-  align-items:flex-end;
-  padding:0 0 20px 22vw;
-}
-
 </style>
 </head>
 
@@ -309,11 +240,7 @@ h1{
 
 <section class="section hero">
   <div class="section-block">
-    <h1>
-      Luis<br>
-      <span class="hero-surname">Blasco-Ibáñez</span><br>
-      Berbel
-    </h1>
+    <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
@@ -323,17 +250,10 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
-        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
-        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
-        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
+        técnico y adaptable, con formación en diseño y experiencia en el sector eléctrico.
       </p>
-      <img src="foto.jpg" alt="Foto personal">
+      <img src="foto.jpg">
     </div>
   </div>
 </section>
@@ -341,48 +261,11 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="brazo1.jpg" alt="Proyecto NODE">
-            </div>
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="reloj1.jpg" alt="Cómoda Sixay">
-            </div>
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="secador2.jpg" alt="Exploración material">
-            </div>
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image"></div>
-            <h2>Proyecto conceptual</h2>
-            <span>Diseño de producto</span>
-          </div>
-        </a>
-
+        <div class="project-card"><img src="brazo1.jpg"></div>
+        <div class="project-card"><img src="reloj1.jpg"></div>
+        <div class="project-card"><img src="secador2.jpg"></div>
       </div>
     </div>
   </div>
@@ -393,27 +276,17 @@ h1{
     <h1>CV</h1>
 
     <div class="cv-wrapper" id="cv">
+      <div class="cv-line" id="cvLine"></div>
 
       <div class="cv-block">
         <h3>Formación</h3>
-        <div class="cv-item">
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Jaume I · Universitat Politècnica de València · Erasmus Londres</span>
-        </div>
+        <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>UJI · UPV · Erasmus Londres</span></div>
       </div>
 
       <div class="cv-block">
         <h3>Experiencia profesional</h3>
-        <div class="cv-item">
-          <strong>Técnico electricista</strong>
-          <span>Autrial</span>
-          <p>Instalación, mantenimiento y resolución técnica en entornos industriales.</p>
-        </div>
-        <div class="cv-item">
-          <strong>Técnico electricista</strong>
-          <span>Elecnor</span>
-          <p>Trabajo en instalaciones eléctricas y proyectos de gran escala.</p>
-        </div>
+        <div class="cv-item"><strong>Técnico electricista</strong><span>Autrial</span></div>
+        <div class="cv-item"><strong>Técnico electricista</strong><span>Elecnor</span></div>
       </div>
 
       <div class="cv-block">
@@ -423,9 +296,7 @@ h1{
 
       <div class="cv-block">
         <h3>Software</h3>
-        <div class="cv-item">
-          <strong>Rhinoceros · AutoCAD · Inventor · SolidWorks · Fusion 360 · Sinutrain · 3ds Max</strong>
-        </div>
+        <div class="cv-item"><strong>Rhino · AutoCAD · Inventor · SolidWorks · Fusion · Sinutrain · 3ds Max</strong></div>
       </div>
 
     </div>
@@ -440,38 +311,38 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
   });
 });
 
-/* portfolio animación */
-const cards=document.querySelectorAll(".project-card");
-const cardObserver=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    e.target.classList.toggle("is-visible",e.isIntersecting);
-  });
-},{threshold:0.3});
-cards.forEach(c=>cardObserver.observe(c));
-
-/* CV animaciones */
-const cv=document.querySelector(".cv-wrapper");
-const blocks=document.querySelectorAll(".cv-block");
-
-/* escalonado automático */
-blocks.forEach((block,i)=>{
-  block.style.transitionDelay = `${i * 120}ms`;
+/* portfolio */
+document.querySelectorAll(".project-card").forEach(card=>{
+  new IntersectionObserver(e=>{
+    e[0].target.classList.toggle("is-visible",e[0].isIntersecting);
+  },{threshold:.3}).observe(card);
 });
 
-/* línea */
-new IntersectionObserver(entries=>{
-  if(entries[0].isIntersecting){
-    cv.classList.add("is-visible");
-  }
-},{threshold:0.2}).observe(cv);
+/* CV bloques */
+const blocks=document.querySelectorAll(".cv-block");
+blocks.forEach((b,i)=>b.style.transitionDelay=`${i*120}ms`);
 
-/* bloques */
 const blockObserver=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    e.target.classList.toggle("is-visible",e.isIntersecting);
-  });
-},{threshold:0.3});
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.3});
 blocks.forEach(b=>blockObserver.observe(b));
+
+/* CV línea progresiva */
+const cv=document.getElementById("cv");
+const line=document.getElementById("cvLine");
+
+window.addEventListener("scroll",()=>{
+  const rect=cv.getBoundingClientRect();
+  const windowH=window.innerHeight;
+
+  const start=windowH*0.3;
+  const end=windowH*0.9;
+
+  const progress=(start-rect.top)/(start-end);
+  const clamped=Math.max(0,Math.min(1,progress));
+
+  line.style.transform=`scaleY(${clamped})`;
+});
 </script>
 
 </body>
