--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:"Inter",sans-serif;
-}
+/* RESET */
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
+/* BODY */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
@@ -38,7 +35,6 @@ nav{
   backdrop-filter:blur(12px);
   z-index:100;
 }
-
 nav span{
   font-size:11px;
   letter-spacing:.3em;
@@ -52,10 +48,8 @@ nav span{
   min-height:100vh;
   scroll-snap-align:start;
   display:flex;
-  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
 }
-
 .section-block{
   position:sticky;
   top:260px;
@@ -63,16 +57,12 @@ nav span{
 }
 
 /* HERO */
-.section.hero{
-  align-items:center;
-}
-
+.section.hero{align-items:center}
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
   margin-left:-4px;
 }
-
 .hero-sub{
   margin-top:24px;
   padding-left:4px;
@@ -81,26 +71,17 @@ nav span{
   color:#777;
 }
 
-h1{
-  font-size:clamp(70px,6vw,120px);
-  font-weight:500;
-  line-height:1.05;
-}
-
 /* ABOUT */
 .about{
   display:flex;
-  align-items:flex-start;
   margin-top:12px;
 }
-
 .about p{
   max-width:700px;
   font-size:15px;
   color:#aaa;
   line-height:1.6;
 }
-
 .about img{
   width:300px;
   height:400px;
@@ -109,7 +90,7 @@ h1{
   opacity:.9;
 }
 
-/* PORTFOLIO */
+/* PORTFOLIO (intacto) */
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
@@ -117,57 +98,41 @@ h1{
   overflow:hidden;
   padding-right:120px;
 }
-
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
-  right:0;
-  top:0;
-  width:120px;
-  height:100%;
-  background:linear-gradient(to right, rgba(10,10,10,0), rgba(10,10,10,1));
+  right:0;top:0;
+  width:120px;height:100%;
+  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
 }
-
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
 }
-
-.portfolio-carousel::-webkit-scrollbar{
-  height:6px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#444;
-  border-radius:6px;
-}
-
 .project-card{
   min-width:460px;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s ease;
 }
-
 .project-card.is-visible{
   opacity:1;
-  transform:translateY(0);
+  transform:none;
 }
 
-/* CV */
+/* ===== CV ===== */
 .cv-wrapper{
   margin-top:32px;
   position:relative;
-  padding-left:48px;
+  padding-left:56px;
 }
 
+/* línea */
 .cv-line{
   position:absolute;
-  left:16px;
+  left:20px;
   top:0;
   width:1px;
   height:100%;
@@ -176,28 +141,36 @@ h1{
   transform-origin:top;
 }
 
+/* bloques */
 .cv-block{
   position:relative;
-  margin-bottom:56px;
+  margin-bottom:64px;
   opacity:0;
   transform:translateY(16px);
   transition:opacity .7s ease, transform .7s ease;
 }
-
 .cv-block.is-visible{
   opacity:1;
-  transform:translateY(0);
+  transform:none;
 }
 
-.cv-block::before{
-  content:"";
+/* puntos */
+.cv-dot{
   position:absolute;
-  left:-40px;
+  left:-44px;
   top:6px;
   width:10px;
   height:10px;
   border-radius:50%;
-  background:#777;
+  background:#555;
+  transition:background .3s ease, transform .3s ease;
+}
+.cv-dot.active{
+  background:#ddd;
+  transform:scale(1.3);
+}
+.cv-dot.past{
+  background:#999;
 }
 
 .cv-block h3{
@@ -206,21 +179,13 @@ h1{
   text-transform:uppercase;
   margin-bottom:20px;
 }
-
-.cv-item{
-  margin-bottom:18px;
-}
-
-.cv-item strong{
-  font-size:15px;
-}
-
+.cv-item{margin-bottom:18px}
+.cv-item strong{font-size:15px}
 .cv-item span{
   display:block;
   font-size:13px;
   color:#888;
 }
-
 .cv-item p{
   margin-top:6px;
   font-size:14px;
@@ -253,7 +218,7 @@ h1{
         Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
         técnico y adaptable, con formación en diseño y experiencia en el sector eléctrico.
       </p>
-      <img src="foto.jpg">
+      <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
@@ -279,22 +244,26 @@ h1{
       <div class="cv-line" id="cvLine"></div>
 
       <div class="cv-block">
+        <div class="cv-dot"></div>
         <h3>Formación</h3>
         <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>UJI · UPV · Erasmus Londres</span></div>
       </div>
 
       <div class="cv-block">
+        <div class="cv-dot"></div>
         <h3>Experiencia profesional</h3>
         <div class="cv-item"><strong>Técnico electricista</strong><span>Autrial</span></div>
         <div class="cv-item"><strong>Técnico electricista</strong><span>Elecnor</span></div>
       </div>
 
       <div class="cv-block">
+        <div class="cv-dot"></div>
         <h3>Idiomas</h3>
         <div class="cv-item"><strong>Español · Inglés · Húngaro</strong></div>
       </div>
 
       <div class="cv-block">
+        <div class="cv-dot"></div>
         <h3>Software</h3>
         <div class="cv-item"><strong>Rhino · AutoCAD · Inventor · SolidWorks · Fusion · Sinutrain · 3ds Max</strong></div>
       </div>
@@ -304,44 +273,51 @@ h1{
 </section>
 
 <script>
-/* navegación */
+/* NAV */
 document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.addEventListener("click",()=>{
-    document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
-  });
+  btn.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
 });
 
-/* portfolio */
+/* PORTFOLIO */
 document.querySelectorAll(".project-card").forEach(card=>{
   new IntersectionObserver(e=>{
     e[0].target.classList.toggle("is-visible",e[0].isIntersecting);
   },{threshold:.3}).observe(card);
 });
 
-/* CV bloques */
-const blocks=document.querySelectorAll(".cv-block");
-blocks.forEach((b,i)=>b.style.transitionDelay=`${i*120}ms`);
-
-const blockObserver=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.3});
-blocks.forEach(b=>blockObserver.observe(b));
-
-/* CV línea progresiva */
+/* CV LOGIC */
 const cv=document.getElementById("cv");
 const line=document.getElementById("cvLine");
+const blocks=[...document.querySelectorAll(".cv-block")];
+const dots=[...document.querySelectorAll(".cv-dot")];
+
+/* escalonado */
+blocks.forEach((b,i)=>b.style.transitionDelay=`${i*120}ms`);
 
 window.addEventListener("scroll",()=>{
-  const rect=cv.getBoundingClientRect();
-  const windowH=window.innerHeight;
-
-  const start=windowH*0.3;
-  const end=windowH*0.9;
-
-  const progress=(start-rect.top)/(start-end);
+  const cvRect=cv.getBoundingClientRect();
+  const start=window.innerHeight*0.35;
+  const progress=(start-cvRect.top)/cvRect.height;
   const clamped=Math.max(0,Math.min(1,progress));
-
   line.style.transform=`scaleY(${clamped})`;
+
+  blocks.forEach((block,i)=>{
+    const rect=block.getBoundingClientRect();
+    const mid=window.innerHeight*0.45;
+
+    if(rect.top < mid){
+      block.classList.add("is-visible");
+      dots[i].classList.add("past");
+      dots[i].classList.remove("active");
+    }
+    if(rect.top < mid && rect.bottom > mid){
+      dots[i].classList.add("active");
+    }
+    if(rect.top > mid){
+      dots[i].classList.remove("active","past");
+    }
+  });
 });
 </script>
 
