--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@ nav span{
   padding:180px 10vw 160px 22vw;
 }
 
-/* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
   top:260px;
@@ -77,10 +76,6 @@ nav span{
   margin-left:-4px;
 }
 
-.hero-surname{
-  white-space:nowrap;
-}
-
 .hero-sub{
   margin-top:24px;
   padding-left:4px;
@@ -93,70 +88,38 @@ nav span{
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
-  line-height:1.05;
-}
-
-/* ========= TEXT ========= */
-.section-block p{
-  margin-top:8px;
-  padding-left:8px;
-  font-size:15px;
-  color:#aaa;
-  max-width:600px;
-  line-height:1.6;
-  text-align:justify;
 }
 
 /* ========= ABOUT ========= */
 .about{
   display:flex;
-  align-items:flex-start;
   margin-top:12px;
 }
 
 .about p{
   max-width:700px;
+  font-size:15px;
+  line-height:1.6;
+  color:#aaa;
 }
 
 .about img{
   width:300px;
   height:400px;
-  margin-top:16px;
   margin-left:40px;
   object-fit:cover;
-  opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
+/* ========= PORTFOLIO (INTACTO) ========= */
 .portfolio-wrapper{
-  position:relative;
   margin-top:32px;
   margin-left:8px;
-  overflow:hidden;
-  padding-right:120px;
-}
-
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(
-    to right,
-    rgba(10,10,10,0),
-    rgba(10,10,10,1)
-  );
 }
 
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  padding-bottom:20px;
-  scroll-behavior:smooth;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
@@ -172,13 +135,9 @@ h1{
 
 .project-card{
   min-width:460px;
-  flex-shrink:0;
-  text-decoration:none;
-  color:inherit;
-  cursor:pointer;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s ease;
 }
 
 .project-card.is-visible{
@@ -186,113 +145,55 @@ h1{
   transform:translateY(0);
 }
 
-.project-card:hover{
-  transform:translateY(-4px);
-}
-
-.project-inner{
-  width:100%;
-}
-
-.project-image{
-  height:260px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform .4s ease;
-}
-
-.project-card:hover .project-image img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  display:block;
-  margin-top:6px;
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ========= CV ========= */
-.cv-wrapper{
-  margin-top:32px;
-  position:relative;
-  padding-left:40px;
+/* ========= CV — ESTILO FRAMER ========= */
+.cv-grid{
+  margin-top:40px;
   display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:80px;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:32px;
 }
 
-.cv-wrapper::before{
-  content:"";
-  position:absolute;
-  left:10px;
-  top:0;
-  bottom:0;
-  width:1px;
-  background:rgba(255,255,255,.08);
+.cv-card{
+  background:rgba(255,255,255,.03);
+  border:1px solid rgba(255,255,255,.06);
+  border-radius:20px;
+  padding:28px;
+  opacity:0;
+  transform:translateY(20px);
+  transition:.8s ease;
 }
 
-.cv-block{
-  position:relative;
+.cv-card.is-visible{
+  opacity:1;
+  transform:translateY(0);
 }
 
-.cv-block::before{
-  content:"";
-  position:absolute;
-  left:-36px;
-  top:6px;
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#777;
-}
-
-.cv-block h3{
-  font-size:18px;
+.cv-card h3{
+  font-size:16px;
   font-weight:500;
-  letter-spacing:.12em;
+  letter-spacing:.15em;
   text-transform:uppercase;
   margin-bottom:20px;
 }
 
 .cv-item{
-  margin-bottom:18px;
+  margin-bottom:16px;
 }
 
 .cv-item strong{
-  display:block;
   font-size:15px;
   font-weight:500;
+  display:block;
 }
 
 .cv-item span{
-  display:block;
   font-size:13px;
   color:#888;
 }
 
 /* ========= FOOTER ========= */
-.footer-wrapper{
-  flex:1;
-  display:flex;
-  align-items:flex-end;
-  padding:0 0 20px 22vw;
-}
-
 .footer{
+  padding:20px 0;
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
@@ -308,14 +209,13 @@ h1{
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
   <span data-i="3">CV</span>
-  <span data-i="4">Contacto</span>
 </nav>
 
 <section class="section hero">
   <div class="section-block">
     <h1>
       Luis<br>
-      <span class="hero-surname">Blasco-Ibáñez</span><br>
+      Blasco-Ibáñez<br>
       Berbel
     </h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
@@ -327,17 +227,10 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
-        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
-        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
-        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
+        con base técnica y sensibilidad por el proceso completo de diseño.
       </p>
-      <img src="foto.jpg" alt="Foto personal">
+      <img src="foto.jpg">
     </div>
   </div>
 </section>
@@ -345,48 +238,11 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="brazo1.jpg" alt="Proyecto NODE">
-            </div>
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="reloj1.jpg" alt="Cómoda Sixay">
-            </div>
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="secador2.jpg" alt="Exploración material">
-            </div>
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image"></div>
-            <h2>Proyecto conceptual</h2>
-            <span>Diseño de producto</span>
-          </div>
-        </a>
-
+        <div class="project-card">NODE</div>
+        <div class="project-card">Sixay</div>
+        <div class="project-card">Exploración</div>
       </div>
     </div>
   </div>
@@ -396,30 +252,27 @@ h1{
   <div class="section-block">
     <h1>CV</h1>
 
-    <div class="cv-wrapper">
+    <div class="cv-grid">
 
-      <div class="cv-block">
+      <div class="cv-card">
         <h3>Formación</h3>
-        <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Jaume I</span></div>
-        <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Politècnica de València</span></div>
-        <div class="cv-item"><strong>Programa Erasmus</strong><span>Londres</span></div>
+        <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>Universitat Jaume I</span></div>
+        <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>UPV</span></div>
+        <div class="cv-item"><strong>Erasmus</strong><span>Londres</span></div>
       </div>
 
-      <div class="cv-block">
+      <div class="cv-card">
         <h3>Idiomas</h3>
         <div class="cv-item"><strong>Español</strong></div>
         <div class="cv-item"><strong>Inglés</strong></div>
         <div class="cv-item"><strong>Húngaro</strong></div>
       </div>
 
-      <div class="cv-block">
+      <div class="cv-card">
         <h3>Software</h3>
-        <div class="cv-item"><strong>Rhinoceros</strong></div>
-        <div class="cv-item"><strong>AutoCAD</strong></div>
-        <div class="cv-item"><strong>Inventor</strong></div>
-        <div class="cv-item"><strong>SolidWorks</strong></div>
-        <div class="cv-item"><strong>Fusion 360</strong></div>
-        <div class="cv-item"><strong>Sinutrain</strong></div>
+        <div class="cv-item"><strong>Rhino · AutoCAD</strong></div>
+        <div class="cv-item"><strong>Inventor · SolidWorks</strong></div>
+        <div class="cv-item"><strong>Fusion 360 · Sinutrain</strong></div>
         <div class="cv-item"><strong>3ds Max</strong></div>
       </div>
 
@@ -429,22 +282,16 @@ h1{
 
 <script>
 document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.addEventListener("click",()=>{
-    document.querySelectorAll(".section")[i]
-      .scrollIntoView({behavior:"smooth"});
-  });
+  btn.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
 });
 
-const carousel=document.querySelector(".portfolio-carousel");
-const cards=document.querySelectorAll(".project-card");
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.2});
 
-const observer=new IntersectionObserver((entries)=>{
-  entries.forEach(entry=>{
-    entry.target.classList.toggle("is-visible",entry.isIntersecting);
-  });
-},{root:carousel,threshold:0.3});
-
-cards.forEach(card=>observer.observe(card));
+document.querySelectorAll(".project-card,.cv-card")
+  .forEach(el=>observer.observe(el));
 </script>
 
 </body>
